subscription-gateway/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: subscription-gateway
    component_type: backend
  name: subscription-gateway
spec:
  ports:
    - port: 9998
      protocol: TCP
      targetPort: 9998
      name: subscription-gateway-service-port
  selector:
    app: subscription-gateway
